[gd_scene load_steps=10 format=3 uid="uid://bjgad00c2xiuc"]

[ext_resource type="Texture2D" uid="uid://dcasdlch5dsl8" path="res://assets/maps/4store.jpg" id="1_ip348"]
[ext_resource type="Script" uid="uid://thd46uutq42k" path="res://scripts/navigation.gd" id="1_mepwa"]
[ext_resource type="Texture2D" uid="uid://cmyda61cho80x" path="res://assets/maps/4store.png" id="4_mepwa"]
[ext_resource type="PackedScene" uid="uid://ct7veakwiei3h" path="res://character.tscn" id="4_n6iop"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_k7xsa"]
vertices = PackedVector2Array(431.781, 504.75, 204.297, 459.07, 208.891, 459.281, 257.922, 366.117, 117.523, 334.391, 285.141, 305.93, 475.289, 296.18, 710.82, 281.453, 686.453, 429.898, 647.133, 343.531, 711.289, 126.891, 726.133, 108.328, 726.961, 277.258, 367.922, -21.1797, 342.852, -81.3438, 529.008, -85.7266, 517.531, 39.6797, 487.102, 291.32, 372.328, 94.5234, 568.477, 77.5313, 469.109, 437.211, 305.188, 257.227, 234.219, 108.961, 232.227, 25.4297, 282.742, 22.5781, 280.719, 108.711, 262.313, 194.406, 148.773, 175.492, 147.227, 119.297, 160.477, 116.891, 597.227, -18.3125, 637.711, -14.7031, 654.023, 64.1172, 655.188, 106.023, 559.727, 320.656, 266.422, 242.828, 527.773, 328.938)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2), PackedInt32Array(3, 4, 5, 6), PackedInt32Array(7, 8, 9), PackedInt32Array(10, 11, 12, 7), PackedInt32Array(13, 14, 15, 16), PackedInt32Array(17, 6, 18, 13, 16, 19), PackedInt32Array(20, 0, 2, 3, 6), PackedInt32Array(6, 5, 21, 18), PackedInt32Array(22, 23, 24, 25, 26), PackedInt32Array(26, 27, 28, 29, 22), PackedInt32Array(19, 30, 31, 32, 33), PackedInt32Array(17, 19, 33, 10, 7, 9, 34), PackedInt32Array(26, 25, 18, 21, 35), PackedInt32Array(17, 34, 36)])
outlines = Array[PackedVector2Array]([PackedVector2Array(159, 107, 137, 111, 139, 184, 253, 203, 257, 250, 292, 263, 278, 297, 66, 333, 243, 373, 203, 449, 181, 448, 198, 468, 437, 516, 479, 440, 485, 303, 525, 340, 737, 285, 736, 80, 708, 115, 665, 99, 664, 63, 646, -24, 590, -29, 563, 61, 528, 35, 540, -96, 328, -91, 358, -19, 362, 86, 291, 97, 293, 12, 222, 16, 224, 100), PackedVector2Array(608, 317, 533, 324, 640, 352, 691, 464, 723, 269, 553, 305)])

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k7xsa"]
size = Vector2(151.359, 114.549)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ip348"]
size = Vector2(70.8408, 108.917)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mepwa"]
size = Vector2(161.727, 106)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o0h2t"]
size = Vector2(99.8973, 149)

[node name="Navigation" type="Node2D"]
script = ExtResource("1_mepwa")

[node name="View" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 98.0
offset_top = 24.0
offset_right = 698.0
offset_bottom = 624.0

[node name="ColorRect" type="ColorRect" parent="View"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.12549, 0.12549, 0.407843)

[node name="Map" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(267, 194)
scale = Vector2(0.942188, 0.942187)
texture = ExtResource("1_ip348")
offset = Vector2(112.524, 139.569)

[node name="Character" parent="." instance=ExtResource("4_n6iop")]
position = Vector2(385, 16)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-2, -1)
offset = Vector2(400, 324)
process_callback = 0

[node name="Map2" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(267, 194)
scale = Vector2(0.942188, 0.942187)
texture = ExtResource("4_mepwa")
offset = Vector2(112.524, 139.569)

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
position = Vector2(-40, 92)
navigation_polygon = SubResource("NavigationPolygon_k7xsa")

[node name="Zones" type="Node2D" parent="."]

[node name="Heal" type="Area2D" parent="Zones"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zones/Heal"]
position = Vector2(148.008, 432.953)
rotation = 0.509933
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_k7xsa")

[node name="Tools" type="Area2D" parent="Zones"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zones/Tools"]
position = Vector2(213.213, 147.428)
rotation = 2.96307
shape = SubResource("RectangleShape2D_ip348")

[node name="Food" type="Area2D" parent="Zones"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zones/Food"]
position = Vector2(583.02, 116.912)
rotation = -1.16428
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_mepwa")

[node name="Fight" type="Area2D" parent="Zones"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zones/Fight"]
position = Vector2(638.707, 484.826)
rotation = -0.2562
shape = SubResource("RectangleShape2D_o0h2t")

[connection signal="body_entered" from="Zones/Heal" to="." method="HealZone"]
[connection signal="body_exited" from="Zones/Heal" to="." method="BaseZone"]
[connection signal="body_entered" from="Zones/Tools" to="." method="ToolZone"]
[connection signal="body_exited" from="Zones/Tools" to="." method="BaseZone"]
[connection signal="body_entered" from="Zones/Food" to="." method="FoodZone"]
[connection signal="body_exited" from="Zones/Food" to="." method="BaseZone"]
[connection signal="body_entered" from="Zones/Fight" to="." method="FightZone"]
[connection signal="body_exited" from="Zones/Fight" to="." method="BaseZone"]
